--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="C:/Users/PC/Desktop/mockito/byte-buddy-1.14.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/PC/Desktop/mockito/byte-buddy-agent-1.14.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/PC/Desktop/mockito/mockito-core-5.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/PC/Desktop/mockito/mockito-subclass-5.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/PC/Desktop/mockito/objenesis-3.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
